--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
+    "@swimlane/ngx-charts": "^4.1.3",
     "angular2-infinite-scroll": "^0.3.1",
     "core-js": "^2.4.1",
+    "d3": "^4.4.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
