--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,6 +43,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.grouplens.lenskit</groupId>
+			<artifactId>lenskit-all</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>eu.luminis</groupId>
 			<artifactId>elastic-rest-spring-wrapper</artifactId>
 			<version>${spring.rest.elastic.version}</version>
