--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -51,6 +51,12 @@
 			<groupId>org.grouplens.lenskit</groupId>
 			<artifactId>lenskit-all</artifactId>
 			<version>2.2.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
