--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.3.RELEASE</version>
+		<version>1.5.10.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -22,13 +22,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<spring.rest.elastic.version>0.7.0</spring.rest.elastic.version>
+		<spring.rest.elastic.version>0.12.0</spring.rest.elastic.version>
 	</properties>
 
     <repositories>
         <repository>
             <id>luminis</id>
-            <url>https://npm.luminis-ams.nl/repository/maven-public</url>
+            <url>https://repository.luminis.amsterdam/repository/maven-public</url>
         </repository>
     </repositories>
 
