--- a/website/package.json
+++ b/website/package.json
@@ -41,6 +41,7 @@
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
     "@types/react-test-renderer": "^16.0.0",
+    "@types/recharts": "^1.0.18",
     "@types/redux-logger": "^3.0.5",
     "@types/rx": "^4.1.1",
     "@types/sinon": "^4.1.3",
@@ -49,6 +50,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
     "redux-logger": "^3.0.6",
